--- a/app/globals.css
+++ b/app/globals.css
@@ -28,5 +28,6 @@ a {
 	--secondary: #1DC37E;
 	--secondary-bg: #C8F8E4;
 	--button-border: #EBEBEB;
+	--gray-dark: #787D85;
 	--font-family: 'Noto Sans', sans-serif;
 }
