--- a/app/globals.css
+++ b/app/globals.css
@@ -29,5 +29,6 @@ a {
 	--secondary-bg: #C8F8E4;
 	--button-border: #EBEBEB;
 	--gray-dark: #787D85;
+	--gray: #A4A4A4;
 	--font-family: 'Noto Sans', sans-serif;
 }
